# cppHpc

cppCode/: .gitignore  CMakeLists.txt  Makefile  historic_premier_league.ipynb  premier_league_ratings.ipynb
cppCode/good_output/: analyze_output.ipynb  bounds.txt  boundsE.txt  bounds_dynamic_minPoints.txt  bounds_minPoints.txt  bounds_static.txt  bounds_static_CL.txt  bounds_static_objectiveEndRounds.txt  bounds_static_objectiveFirstRounds.txt  bounds_static_objectiveMiddleRounds.txt  functions.py  last_rounds.txt  last_roundsE.txt  last_rounds_minPoints.txt  last_rounds_min_PointsDifference.txt  last_rounds_static.txt  last_rounds_static_CL.txt  last_rounds_static_dynamic_mintPoints.txt  last_rounds_static_objectiveMiddleRounds.txt  last_rounds_test.txt  last_rounds_test_rating_effect.txt  ranking.txt  rankingE.txt  ranking_minPoints.txt  ranking_min_PointsDifference.txt  ranking_static.txt  ranking_static_CL.txt  ranking_test_rating_effect.txt  rf_features.txt  rf_featuresE.txt  rf_features_dynamic_minPoints.txt  rf_features_minPoints.txt  rf_features_static.txt  rf_features_test.txt  team_bounds.txt  team_bounds_min_PointsDifference.txt  team_bounds_test.txt  team_bounds_test_rating_effect.txt
cppCode/include/config/: CplexConfig.h
cppCode/include/entities/: HapSet.h  Match.h  Round.h  Team.h  TimeTable.h
cppCode/include/tournament/: ChampionsLeague.h  DoubleRoundRobin.h  Tournament.h
cppCode/include/utils/Metrics/: Bounds.h  ChampionsLeagueMetrics.h  RandomForestFeatures.h  Rankings.h  RoundStatistics.h  SecondaryMetrics.h  TeamBounds.h
cppCode/include/utils/Scheduling/Schedulers/: ChampionsLeagueScheduler.h  DoubleRoundRobinScheduler.h  Scheduler.h
cppCode/include/utils/Scheduling/Strategies/: MaximizePointsDifference.h  MinimizeIrrelevanceStaticSchedule.h  MinimizePointsDifference.h  MinimizePointsDifferenceLaterRounds.h  MinimizeRatingDifference.h  SchedulingStrategy.h  StaticObjective.h
cppCode/include/utils/Simulations/: MonteCarloSimulator.h  OutcomeProbabilities.h  Simulator.h
cppCode/include/utils/TeamManager/: ChampionsLeagueTeamManager.h  NFLTeamManager.h  PremierLeague.h  TeamManager.h
cppCode/include/utils/Writers/: TeamBoundsWriter.h  Writer.h
cppCode/output/: averagePointsDifferenceShapley.txt  averagePointsDifferenceStatic.txt  basicMetricsShapley.txt  basicMetricsStatic.txt  championsLeagueMetrics.txt  championsLeagueMetricsNoPot.txt  champions_league.ipynb  clRanking.txt  functions.py  hap.txt  hap_first_half.txt  matchRelevanceDynamic.txt  matchRelevanceDynamicMaximizePointsDifferenceLaterRounds.txt  matchRelevanceShapley.txt  matchRelevanceStatic.txt  new_df.csv  premier_league_static.ipynb  rankingStatic.txt  rfModel.txt  schedulingMetricsStatic.txt  thesis_meeting.ipynb  timeTableTest.txt
cppCode/output/.ipynb_checkpoints/: premier_league_static-checkpoint.ipynb
cppCode/src/: main.cpp
cppCode/src/entities/: HapSet.cpp  Match.cpp  Round.cpp  Team.cpp  TimeTable.cpp
cppCode/src/tournament/: ChampionsLeague.cpp  DoubleRoundRobin.cpp  Tournament.cpp
cppCode/src/utils/Metrics/: Bounds.cpp  ChampionsLeagueMetrics.cpp  RandomForestFeatures.cpp  Rankings.cpp  RoundStatistics.cpp  SecondaryMetrics.cpp  TeamBounds.cpp
cppCode/src/utils/Scheduling/Schedulers/: ChampionsLeagueScheduler.cpp  DoubleRoundRobinScheduler.cpp  Scheduler.cpp
cppCode/src/utils/Scheduling/Strategies/: MaximizePointsDifference.cpp  MinimizeIrrelevanceStaticSchedule.cpp  MinimizePointsDifference.cpp  MinimizePointsDifferenceLaterRounds.cpp  MinimizeRatingDifference.cpp  SchedulingStrategy.cpp  StaticObjective.cpp
cppCode/src/utils/Simulations/: MonteCarloSimulator.cpp  OutcomeProbabilities.cpp  Simulator.cpp
cppCode/src/utils/TeamManager/: ChampionsLeagueTeamManager.cpp  NFLTeamManager.cpp  PremierLeague.cpp  TeamManager.cpp
cppCode/src/utils/Writers/: Writer.cpp
